--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,17 @@
 </head>
 <body>
 <script>
+	const pressed = [];
+	const sequence = 'shasha';
+	window.addEventListener('keyup', (e) => {
+		// console.log(e.key);
+		pressed.push(e.key);
+		pressed.splice(-sequence.length - 1, pressed.length - sequence.length);
+		// console.log(pressed);
+		if (pressed.join("").includes(sequence)) {
+			cornify_add();
+		}
+	});
 </script>
 </body>
 </html>
